full_project340/phase2/parser.output
Terminals unused in grammar

   SINGLE_LINE_COMMENT
   OTHERCHAR


State 15 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt: expr SEMICOLON
    3     | ifstmt
    4     | whilestmt
    5     | forstmt
    6     | returnstmt
    7     | BREAK SEMICOLON
    8     | CONTINUE SEMICOLON
    9     | block
   10     | funcdef
   11     | SEMICOLON

   12 stmt_list: stmt stmt_list
   13          | %empty

   14 expr: assignexpr
   15     | expr ADD expr
   16     | expr MINUS expr
   17     | expr MULTIPLICATION expr
   18     | expr DIVISION expr
   19     | expr MODULO expr
   20     | expr GREATER expr
   21     | expr GREATER_EQUAL expr
   22     | expr LESS expr
   23     | expr LESS_EQUAL expr
   24     | expr EQUAL expr
   25     | expr INEQUAL expr
   26     | expr AND expr
   27     | expr OR expr
   28     | term

   29 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   30     | UMINUS expr
   31     | NOT expr
   32     | INCREMENT lvalue
   33     | lvalue INCREMENT
   34     | DECREMENT lvalue
   35     | lvalue DECREMENT
   36     | primary

   37 $@1: %empty

   38 $@2: %empty

   39 assignexpr: lvalue $@1 ASSIGN $@2 expr

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   44        | const

   45 lvalue: IDENT
   46       | LOCAL IDENT
   47       | DOUBLE_COLON IDENT
   48       | member

   49 member: lvalue DOT IDENT
   50       | lvalue LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   51       | call DOT IDENT
   52       | call LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET

   53 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   54     | lvalue callsuffix
   55     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   56 callsuffix: normcall
   57           | methodcall

   58 $@3: %empty

   59 normcall: LEFT_PARENTHESIS $@3 elist RIGHT_PARENTHESIS

   60 methodcall: DOUBLE_DOT IDENT LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   61 elist: expr elist_expressions
   62      | %empty

   63 elist_expressions: COMMA expr elist_expressions
   64                  | %empty

   65 objectdef: LEFT_SQUARE_BRACKET elist RIGHT_SQUARE_BRACKET
   66          | LEFT_SQUARE_BRACKET indexed RIGHT_SQUARE_BRACKET

   67 indexed: indexedelem indexedelem_list

   68 indexedelem_list: COMMA indexedelem indexedelem_list
   69                 | %empty

   70 $@4: %empty

   71 indexedelem: LEFT_CURLY_BRACKET expr COLON $@4 expr RIGHT_CURLY_BRACKET

   72 $@5: %empty

   73 block: LEFT_CURLY_BRACKET $@5 stmt_list RIGHT_CURLY_BRACKET
   74      | LEFT_CURLY_BRACKET RIGHT_CURLY_BRACKET

   75 $@6: %empty

   76 $@7: %empty

   77 $@8: %empty

   78 $@9: %empty

   79 funcdef: FUNCTION $@6 IDENT $@7 LEFT_PARENTHESIS $@8 idlist RIGHT_PARENTHESIS $@9 block

   80 $@10: %empty

   81 $@11: %empty

   82 $@12: %empty

   83 funcdef: FUNCTION $@10 LEFT_PARENTHESIS $@11 idlist RIGHT_PARENTHESIS $@12 block

   84 const: INTEGER
   85      | REAL
   86      | STRINGCONST
   87      | NIL
   88      | TRUE
   89      | FALSE

   90 $@13: %empty

   91 idlist: IDENT $@13 idlist_list
   92       | %empty

   93 $@14: %empty

   94 idlist_list: COMMA IDENT $@14 idlist_list
   95            | %empty

   96 ifstmt: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
   97       | IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt ELSE stmt

   98 whilestmt: WHILE LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

   99 $@15: %empty

  100 forstmt: FOR LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS $@15 stmt

  101 $@16: %empty

  102 returnstmt: RETURN $@16 expr SEMICOLON
  103           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 96 97
ELSE (259) 97
WHILE (260) 98
FOR (261) 100
FUNCTION (262) 79 83
RETURN (263) 102 103
BREAK (264) 7
CONTINUE (265) 8
AND (266) 26
NOT (267) 31
OR (268) 27
LOCAL (269) 46
TRUE (270) 88
FALSE (271) 89
NIL (272) 87
ASSIGN (273) 39
ADD (274) 15
MINUS (275) 16
MULTIPLICATION (276) 17
DIVISION (277) 18
MODULO (278) 19
EQUAL (279) 24
INEQUAL (280) 25
INCREMENT (281) 32 33
DECREMENT (282) 34 35
GREATER (283) 20
GREATER_EQUAL (284) 21
LESS (285) 22
LESS_EQUAL (286) 23
LEFT_CURLY_BRACKET (287) 71 73 74
RIGHT_CURLY_BRACKET (288) 71 73 74
LEFT_SQUARE_BRACKET (289) 50 52 65 66
RIGHT_SQUARE_BRACKET (290) 50 52 65 66
LEFT_PARENTHESIS (291) 29 43 53 55 59 60 79 83 96 97 98 100
RIGHT_PARENTHESIS (292) 29 43 53 55 59 60 79 83 96 97 98 100
SEMICOLON (293) 2 7 8 11 100 102 103
COMMA (294) 63 68 94
COLON (295) 71
DOUBLE_COLON (296) 47
DOT (297) 49 51
DOUBLE_DOT (298) 60
SINGLE_LINE_COMMENT (299)
OTHERCHAR (300)
IDENT (301) 45 46 47 49 51 60 79 91 94
INTEGER (302) 84
REAL (303) 85
STRINGCONST (304) 86
UMINUS (305) 30


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
stmt (53)
    on left: 2 3 4 5 6 7 8 9 10 11, on right: 12 96 97 98 100
stmt_list (54)
    on left: 12 13, on right: 1 12 73
expr (55)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    2 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 39 50 52 61 63
    71 96 97 98 100 102
term (56)
    on left: 29 30 31 32 33 34 35 36, on right: 28
assignexpr (57)
    on left: 39, on right: 14
$@1 (58)
    on left: 37, on right: 39
$@2 (59)
    on left: 38, on right: 39
primary (60)
    on left: 40 41 42 43 44, on right: 36
lvalue (61)
    on left: 45 46 47 48, on right: 32 33 34 35 39 40 49 50 54
member (62)
    on left: 49 50 51 52, on right: 48
call (63)
    on left: 53 54 55, on right: 41 51 52 53
callsuffix (64)
    on left: 56 57, on right: 54
normcall (65)
    on left: 59, on right: 56
$@3 (66)
    on left: 58, on right: 59
methodcall (67)
    on left: 60, on right: 57
elist (68)
    on left: 61 62, on right: 53 55 59 60 65 100
elist_expressions (69)
    on left: 63 64, on right: 61 63
objectdef (70)
    on left: 65 66, on right: 42
indexed (71)
    on left: 67, on right: 66
indexedelem_list (72)
    on left: 68 69, on right: 67 68
indexedelem (73)
    on left: 71, on right: 67 68
$@4 (74)
    on left: 70, on right: 71
block (75)
    on left: 73 74, on right: 9 79 83
$@5 (76)
    on left: 72, on right: 73
funcdef (77)
    on left: 79 83, on right: 10 43 55
$@6 (78)
    on left: 75, on right: 79
$@7 (79)
    on left: 76, on right: 79
$@8 (80)
    on left: 77, on right: 79
$@9 (81)
    on left: 78, on right: 79
$@10 (82)
    on left: 80, on right: 83
$@11 (83)
    on left: 81, on right: 83
$@12 (84)
    on left: 82, on right: 83
const (85)
    on left: 84 85 86 87 88 89, on right: 44
idlist (86)
    on left: 91 92, on right: 79 83
$@13 (87)
    on left: 90, on right: 91
idlist_list (88)
    on left: 94 95, on right: 91 94
$@14 (89)
    on left: 93, on right: 94
ifstmt (90)
    on left: 96 97, on right: 3
whilestmt (91)
    on left: 98, on right: 4
forstmt (92)
    on left: 100, on right: 5
$@15 (93)
    on left: 99, on right: 100
returnstmt (94)
    on left: 102 103, on right: 6
$@16 (95)
    on left: 101, on right: 102


State 0

    0 $accept: . program $end

    IF                   shift, and go to state 1
    WHILE                shift, and go to state 2
    FOR                  shift, and go to state 3
    FUNCTION             shift, and go to state 4
    RETURN               shift, and go to state 5
    BREAK                shift, and go to state 6
    CONTINUE             shift, and go to state 7
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    INCREMENT            shift, and go to state 13
    DECREMENT            shift, and go to state 14
    LEFT_CURLY_BRACKET   shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 16
    LEFT_PARENTHESIS     shift, and go to state 17
    SEMICOLON            shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 19
    IDENT                shift, and go to state 20
    INTEGER              shift, and go to state 21
    REAL                 shift, and go to state 22
    STRINGCONST          shift, and go to state 23
    UMINUS               shift, and go to state 24

    $default  reduce using rule 13 (stmt_list)

    program     go to state 25
    stmt        go to state 26
    stmt_list   go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 1

   96 ifstmt: IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
   97       | IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt ELSE stmt

    LEFT_PARENTHESIS  shift, and go to state 43


State 2

   98 whilestmt: WHILE . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt

    LEFT_PARENTHESIS  shift, and go to state 44


State 3

  100 forstmt: FOR . LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS $@15 stmt

    LEFT_PARENTHESIS  shift, and go to state 45


State 4

   79 funcdef: FUNCTION . $@6 IDENT $@7 LEFT_PARENTHESIS $@8 idlist RIGHT_PARENTHESIS $@9 block
   83        | FUNCTION . $@10 LEFT_PARENTHESIS $@11 idlist RIGHT_PARENTHESIS $@12 block

    LEFT_PARENTHESIS  reduce using rule 80 ($@10)
    $default          reduce using rule 75 ($@6)

    $@6   go to state 46
    $@10  go to state 47


State 5

  102 returnstmt: RETURN . $@16 expr SEMICOLON
  103           | RETURN . SEMICOLON

    SEMICOLON  shift, and go to state 48

    $default  reduce using rule 101 ($@16)

    $@16  go to state 49


State 6

    7 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 7

    8 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 8

   31 term: NOT . expr

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    INCREMENT            shift, and go to state 13
    DECREMENT            shift, and go to state 14
    LEFT_SQUARE_BRACKET  shift, and go to state 16
    LEFT_PARENTHESIS     shift, and go to state 17
    DOUBLE_COLON         shift, and go to state 19
    IDENT                shift, and go to state 20
    INTEGER              shift, and go to state 21
    REAL                 shift, and go to state 22
    STRINGCONST          shift, and go to state 23
    UMINUS               shift, and go to state 24

    expr        go to state 52
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 9

   46 lvalue: LOCAL . IDENT

    IDENT  shift, and go to state 53


State 10

   88 const: TRUE .

    $default  reduce using rule 88 (const)


State 11

   89 const: FALSE .

    $default  reduce using rule 89 (const)


State 12

   87 const: NIL .

    $default  reduce using rule 87 (const)


State 13

   32 term: INCREMENT . lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 54
    DOUBLE_COLON      shift, and go to state 19
    IDENT             shift, and go to state 20

    lvalue  go to state 55
    member  go to state 33
    call    go to state 56


State 14

   34 term: DECREMENT . lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 54
    DOUBLE_COLON      shift, and go to state 19
    IDENT             shift, and go to state 20

    lvalue  go to state 57
    member  go to state 33
    call    go to state 56


State 15

   73 block: LEFT_CURLY_BRACKET . $@5 stmt_list RIGHT_CURLY_BRACKET
   74      | LEFT_CURLY_BRACKET . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET  shift, and go to state 58

    RIGHT_CURLY_BRACKET  [reduce using rule 72 ($@5)]
    $default             reduce using rule 72 ($@5)

    $@5  go to state 59


State 16

   65 objectdef: LEFT_SQUARE_BRACKET . elist RIGHT_SQUARE_BRACKET
   66          | LEFT_SQUARE_BRACKET . indexed RIGHT_SQUARE_BRACKET

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    INCREMENT            shift, and go to state 13
    DECREMENT            shift, and go to state 14
    LEFT_CURLY_BRACKET   shift, and go to state 60
    LEFT_SQUARE_BRACKET  shift, and go to state 16
    LEFT_PARENTHESIS     shift, and go to state 17
    DOUBLE_COLON         shift, and go to state 19
    IDENT                shift, and go to state 20
    INTEGER              shift, and go to state 21
    REAL                 shift, and go to state 22
    STRINGCONST          shift, and go to state 23
    UMINUS               shift, and go to state 24

    $default  reduce using rule 62 (elist)

    expr         go to state 61
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 62
    objectdef    go to state 35
    indexed      go to state 63
    indexedelem  go to state 64
    const        go to state 38


State 17

   29 term: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   43 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   55 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION             shift, and go to state 4
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    INCREMENT            shift, and go to state 13
    DECREMENT            shift, and go to state 14
    LEFT_SQUARE_BRACKET  shift, and go to state 16
    LEFT_PARENTHESIS     shift, and go to state 17
    DOUBLE_COLON         shift, and go to state 19
    IDENT                shift, and go to state 20
    INTEGER              shift, and go to state 21
    REAL                 shift, and go to state 22
    STRINGCONST          shift, and go to state 23
    UMINUS               shift, and go to state 24

    expr        go to state 65
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 66
    const       go to state 38


State 18

   11 stmt: SEMICOLON .

    $default  reduce using rule 11 (stmt)


State 19

   47 lvalue: DOUBLE_COLON . IDENT

    IDENT  shift, and go to state 67


State 20

   45 lvalue: IDENT .

    $default  reduce using rule 45 (lvalue)


State 21

   84 const: INTEGER .

    $default  reduce using rule 84 (const)


State 22

   85 const: REAL .

    $default  reduce using rule 85 (const)


State 23

   86 const: STRINGCONST .

    $default  reduce using rule 86 (const)


State 24

   30 term: UMINUS . expr

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    INCREMENT            shift, and go to state 13
    DECREMENT            shift, and go to state 14
    LEFT_SQUARE_BRACKET  shift, and go to state 16
    LEFT_PARENTHESIS     shift, and go to state 17
    DOUBLE_COLON         shift, and go to state 19
    IDENT                shift, and go to state 20
    INTEGER              shift, and go to state 21
    REAL                 shift, and go to state 22
    STRINGCONST          shift, and go to state 23
    UMINUS               shift, and go to state 24

    expr        go to state 68
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 25

    0 $accept: program . $end

    $end  shift, and go to state 69


State 26

   12 stmt_list: stmt . stmt_list

    IF                   shift, and go to state 1
    WHILE                shift, and go to state 2
    FOR                  shift, and go to state 3
    FUNCTION             shift, and go to state 4
    RETURN               shift, and go to state 5
    BREAK                shift, and go to state 6
    CONTINUE             shift, and go to state 7
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    INCREMENT            shift, and go to state 13
    DECREMENT            shift, and go to state 14
    LEFT_CURLY_BRACKET   shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 16
    LEFT_PARENTHESIS     shift, and go to state 17
    SEMICOLON            shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 19
    IDENT                shift, and go to state 20
    INTEGER              shift, and go to state 21
    REAL                 shift, and go to state 22
    STRINGCONST          shift, and go to state 23
    UMINUS               shift, and go to state 24

    $default  reduce using rule 13 (stmt_list)

    stmt        go to state 26
    stmt_list   go to state 70
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 27

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


State 28

    2 stmt: expr . SEMICOLON
   15 expr: expr . ADD expr
   16     | expr . MINUS expr
   17     | expr . MULTIPLICATION expr
   18     | expr . DIVISION expr
   19     | expr . MODULO expr
   20     | expr . GREATER expr
   21     | expr . GREATER_EQUAL expr
   22     | expr . LESS expr
   23     | expr . LESS_EQUAL expr
   24     | expr . EQUAL expr
   25     | expr . INEQUAL expr
   26     | expr . AND expr
   27     | expr . OR expr
